<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="24dp"
        android:text="@string/check_dividir"
        app:layout_constraintStart_toEndOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:text="@string/check_dividir" />

    <EditText
        android:id="@+id/txt_valor1"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="@string/txt_PrimerValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txt_valor2"
        android:layout_width="248dp"
        android:layout_height="54dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/txt_SegundoValor"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor1" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="200dp"
        android:onClick="Calcular"
        android:text="@string/button_Operacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="123dp"
        android:layout_height="38dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="52dp"
        android:text="@string/textView_Resutado"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="39dp"
        android:text="@string/check_resta"
        app:layout_constraintStart_toEndOf="@+id/checkBox1"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2"
        tools:text="@string/check_resta" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/check_suma"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_valor2"
        tools:text="@string/check_suma" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="117dp"
        android:layout_height="39dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/check_multiplicar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox1"
        tools:text="@string/check_multiplicar" />

</androidx.constraintlayout.widget.ConstraintLayout>